[package]
name = "coros"
version = "0.1.0"
authors = ["mnussbaum <michaelnussbaum08@gmail.com>"]

[lib]
name = "coros"

[dependencies]
libc = "^0.1.10"
log = "^0.3.1"
num_cpus = "*"
rand = "^0.3.10"

[dependencies.deque]
git = "https://github.com/kinghajj/deque.git"
rev = "1ccb41a56a"

[dependencies.context]
git = "https://github.com/zonyitoo/context-rs.git"
rev = "dcbe2693fa"

[dependencies.mio]
git = "https://github.com/carllerche/mio.git"
rev = "3537a6980a"

[dependencies.scoped_threadpool]
git = "https://github.com/mnussbaum/scoped-threadpool-rs.git"
